deployment/app/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-db
  template:
    metadata:
      labels:
        app: api-db
    spec:
      containers:
        - name:
            neo4j
          image: neo4j:2026.04-community
          volumeMounts:
            - name: api-db
              mountPath: /data
          resources:
            requests:
              cpu: "600m"
              memory: "2000Mi"
      volumes:
        - name: api-db
          persistentVolumeClaim:
            claimName: api-db
