deployment/app/db-facade-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-facade
spec:
  selector:
    app: db-facade
  ports:
    - name: http
      port: 80
      targetPort: 80
