deployment/app/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-db
spec:
  type: ClusterIP
  selector:
    app: api-db
  ports:
    - name: http
      port: 7474
      targetPort: 7474
    - name: bolt
      port: 7687
      targetPort: 7687
