deployment/app/db-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: db
spec:
  parentRefs:
    - name: more-cars-gateway
      sectionName: more-cars

  hostnames:
    - default.db.more-cars.internal

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: api-db-service
          port: 7474
