deployment/app/db-https-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: db-https
spec:
  parentRefs:
    - name: more-cars-gateway
      sectionName: more-cars-https

  hostnames:
    - db.default.more-cars.internal

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: api-db-service
          port: 7474
